objects/Case.object
<CustomObject>
    <fields>
        <fullName>Component__c</fullName>
        <description>New field for Vertica</description>
        <label>Component</label>
        <picklist>
            <picklistValues>
                <fullName>AdminTools/Diags/Scripts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Backup/DR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Drivers - ODBC/JDBC/ADO.NET</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cluster Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Custom Projection Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Database Designer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Load/COPY/Import/Export</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Removal – Delete/Purge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Documentation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Environment/Hardware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IPVS Load Balancer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>License</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Management Console</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring/Ganglia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MyVertica access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Node Mgmt - Add/Remove/Rebalance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Optimizer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Refresh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resource Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RPL (Restircted Parties List)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spread</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SQL /DDL/DML/Queries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Third Party Tools</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transactions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tuple Mover</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_of_Submitter__c</fullName>
        <label>Country of Submitter</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Åland Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bonaire, Sint Eustatius and Saba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Botswana</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Functionality__c</fullName>
        <label>Current Functionality</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Description__c</fullName>
        <formula>IF( Data_Quality_Score__c =100,&quot;All Case Details Captured&quot;, &quot;Missing: &quot;&amp;IF( ISPICKVAL( Status,&quot;&quot;),&quot;Status, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF(ISPICKVAL( Type ,&quot;&quot;), &quot;Type, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Origin ,&quot;&quot;), &quot;Origin, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Reason ,&quot;&quot;), &quot;Reason, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( ISPICKVAL( Priority ,&quot;&quot;), &quot;Priority, &quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( LEN( Subject )&lt;5, &quot;Meaningful Subject Line&quot;,&quot;&quot;)&amp;&quot;&quot;&amp;IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), &quot;Associated Account and Contact&quot;,&quot;&quot;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Data_Quality_Score__c</fullName>
        <formula>IF( OR(LEN(ContactId)=0,LEN( AccountId)=0), 0,10) + IF( ISPICKVAL( Status ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Type ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Origin ,&quot;&quot;), 0,15) + IF( ISPICKVAL( Reason ,&quot;&quot;), 0,15) + IF(ISPICKVAL(Priority, &quot;&quot;),0,15) + IF(LEN( Subject )&lt;5,0,15)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Data Quality Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Customer__c</fullName>
        <inlineHelpText>Tracks when a Renewal Quote was sent to customer</inlineHelpText>
        <label>Date Sent to Customer</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sent_to_Sales__c</fullName>
        <label>Date Sent to Sales</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Deliverables__c</fullName>
        <label>Deliverables</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Developer__c</fullName>
        <label>Developer</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Difference_in_Due_Dates__c</fullName>
        <formula>Revised_Due_Date__c - Due_Date__c</formula>
        <label>Difference in Due Dates</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <description>This field is to track the due date given by customer.</description>
        <label>Due Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Duration_Days__c</fullName>
        <label>Duration (Days)</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Indication of where the problem is being experienced  -- New field for Vertica</description>
        <label>Environment</label>
        <picklist>
            <picklistValues>
                <fullName>Production</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QA/Staging</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Development</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Escalated_Reason__c</fullName>
        <description>New field for Vertica</description>
        <label>Escalated Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Estimated_Costs__c</fullName>
        <label>Estimated Costs</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Total_Hours__c</fullName>
        <description>Field created for Admin CR process.  It will indicate amount of time required to implement CR.</description>
        <label>Estimated Total Hours</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Existing_Folder_Name__c</fullName>
        <inlineHelpText>Enter Name of Existing Folder to fulfill modification or deletion request.</inlineHelpText>
        <label>Existing Folder Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expected_Functionality__c</fullName>
        <label>Expected Functionality</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Expertise_Level__c</fullName>
        <description>Required as of of the OAE parameters</description>
        <label>Expertise Level</label>
        <picklist>
            <picklistValues>
                <fullName>0</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Assignee__c</fullName>
        <label>External Assignee</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Case_ID__c</fullName>
        <label>External Case ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_Documents_Link__c</fullName>
        <description>Link to documents stored externally</description>
        <label>External Documents Link</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FTP_User_Password__c</fullName>
        <description>A formula field from Account.FTP_Username_Password__c
new field for Vertica</description>
        <inlineHelpText>Use ftp://customers.vertica.com &lt;ftp://customers.vertica.com/&gt; to upload files, using the provided ftp id/pwd information.</inlineHelpText>
        <label>FTP User/Password</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Folder_Name_Approved__c</fullName>
        <inlineHelpText>Date Folder Name was approved</inlineHelpText>
        <label>Folder Name Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Folder_Super_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The Super User will be the individual authorized to publish dashboards and reports to this private folder. Super User identified must verify technical capability for report and dashboard creation.</inlineHelpText>
        <label>Folder Super User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GETSAT_TOPIC__Reply_Status__c</fullName>
        <label>Reply Status</label>
        <picklist>
            <picklistValues>
                <fullName>Company Replied</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Replied</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GETSAT_TOPIC__Topic_Url__c</fullName>
        <formula>GETSAT_TOPIC__Topic__r.GETSAT_TOPIC__topic_url__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Topic Url</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GETSAT_TOPIC__Topic__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Topic</label>
        <referenceTo>GETSAT_TOPIC__Topic__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HP_Opportunity_Id__c</fullName>
        <formula>Opportunity__r.Opportunity_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HP Opportunity ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hardware__c</fullName>
        <label>Hardware</label>
        <picklist>
            <picklistValues>
                <fullName>PC x86</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hours_to_Complete__c</fullName>
        <label>Hours to Complete</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hrs_Past_Due_Revised__c</fullName>
        <formula>IF(NOT(ISBLANK( Revised_Due_Date__c)), ClosedDate - Revised_Due_Date__c , ClosedDate -Due_Date__c )*24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hrs Past Due/Revised</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impact_Summary__c</fullName>
        <label>Impact Summary</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Impacted_Group__c</fullName>
        <label>Impacted Group</label>
        <picklist>
            <picklistValues>
                <fullName>Enterprise Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inside Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marketing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Region__c</fullName>
        <label>Impacted Region</label>
        <picklist>
            <picklistValues>
                <fullName>AMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EMEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multi</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation_Date__c</fullName>
        <label>Implementation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Implementation_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Field created for Admin CR process. It will indicate the person who will be working on CR.</description>
        <label>Implementation Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Implemented_By__c</fullName>
        <description>Field created for Admin CR process. It will indicate who/which Team will do the CR in Production.</description>
        <label>Implemented By</label>
        <picklist>
            <picklistValues>
                <fullName>Advanced Admin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Escalated__c</fullName>
        <description>for vertica</description>
        <label>Is Escalated</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Justification__c</fullName>
        <description>Field created for Admin CR process. Justification will store additional inputs for CR.</description>
        <label>Justification</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Keywords__c</fullName>
        <label>Keywords</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Status_Change__c</fullName>
        <description>Stores the last time the status changed -- used by the Case Business Hours Tools package.</description>
        <label>Last Status Change</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <description>When the case was last updated (including case comments and emails)
Vertica field</description>
        <label>Last Updated</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Latest_Version1__c</fullName>
        <description>New field for Vertica</description>
        <label>Latest Version</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_to_Report_Dashboard__c</fullName>
        <label>Link to Report/Dashboard</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LongExternalLink__c</fullName>
        <label>Long External Document Link</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Major_Version__c</fullName>
        <label>Version</label>
        <picklist>
            <picklistValues>
                <fullName>2.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.x</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.0</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unknown</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Managing_BG__c</fullName>
        <description>multi-BG</description>
        <label>Multi-BG Model</label>
        <picklist>
            <picklistValues>
                <fullName>ES-HPSW ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES-TS ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS (HPSW mix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS (PPS mix)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS-AU ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS-ES ICOEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TS-HPSW ICOEM</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Missed_TAT_Reason__c</fullName>
        <description>Shows the reason for missing the turn-around-time (TAT)</description>
        <label>Missed TAT Reason</label>
        <picklist>
            <picklistValues>
                <fullName>BO Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case misrouted due to user</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed by boundary support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Credit issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CRS Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FO Delivery Country Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GASC Coords Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Rework</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Large/Complex Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple case scenarios need addressed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multivendor Delay</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New issue without known resolution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Query Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Revised Date Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Call Logged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SW/VSOE Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Down</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System issues / downtime</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>User outside of support hours</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for boundary support response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiting for requestor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workload/prioritization</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Missed_Turnaround_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Shows if the case has missed its turnaround time</description>
        <label>Missed Turnaround Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Account_Name__c</fullName>
        <inlineHelpText>This field is required if you want to create a new account</inlineHelpText>
        <label>New Account Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Number_of_Accounts__c</fullName>
        <inlineHelpText>Please enter the number of accounts being requested on this case.</inlineHelpText>
        <label>Number of Accounts</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OS__c</fullName>
        <description>new field for Vertica</description>
        <label>OS</label>
        <picklist>
            <picklistValues>
                <fullName>Debian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fedora</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RedHat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SUSE</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>OpenDate__c</fullName>
        <formula>case(Status,&quot;Open&quot;, datevalue(CreatedDate) ,datevalue( ClosedDate ))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OpenDate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>POC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>New field for Vertica POC(Proof of concept) field</description>
        <label>POC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_case_formula__c</fullName>
        <formula>ParentId</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Case ID Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>Partner Account Name from CSIF</description>
        <label>Partner Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority_Level__c</fullName>
        <formula>CASE(Priority,&quot;Urgent&quot;,10,&quot;High&quot;,7,&quot;Medium&quot;,5,2)*CASE(Case_Age_Business_Days__c,0,1,1,3,2,3,3,5,4,5,10)*CASE(Scenario__c,&quot;UVA&quot;,50,&quot;Account Hierarchy needs to be updated&quot;,5,&quot;Request to change the Org level&quot;,5,&quot;Unreferenced scenario&quot;,5,&quot;Account address requires update&quot;,1,&quot;Account name is different from what the user expects&quot;,1,&quot;Account is out of business&quot;,1,&quot;Duplicate records merge required&quot;,1,&quot;Account address requires update&quot;,1,&quot;Account name in ECLIPSE is different from SFDC&quot;,1,&quot;Account name is different from what the user expects&quot;,1,8)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Priority Level</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <label>Product</label>
        <picklist>
            <picklistValues>
                <fullName>Vertica</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>